# opencascade-rs

./: Cargo.toml
crates/occt-sys/: Cargo.toml  build.rs
crates/opencascade/: Cargo.toml
crates/opencascade-sys/: Cargo.toml  build.rs
crates/opencascade-sys/include/: wrapper.hxx
crates/opencascade-sys/src/: lib.rs
crates/opencascade/src/: lib.rs  primitives.rs
crates/opencascade/src/primitives/: compound.rs  edge.rs  face.rs  shape.rs  shell.rs  solid.rs  vertex.rs  wire.rs
