[package]
name = "opencascade"
description = "A high level Rust wrapper to build 3D models in code, using the OpenCascade CAD kernel"
authors = [
  "Artem Novikov <novartole@gmail.com>",
  "Brian Schwind <brianmschwind@gmail.com>",
]
license = "LGPL-2.1"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/novartole/opencascade-rs"

[dependencies]
cxx = "1"
opencascade-sys = { version = "0.2", path = "../opencascade-sys" }
glam = { version = "0.24", features = ["bytemuck"] }
thiserror = "1"

[features]
default = ["builtin"]
builtin = ["opencascade-sys/builtin"]
